package tutorial;

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;
  optional uint32 age = 5 [default = 20];

  extensions 100 to 200;
}

/*
extend Person {
  optional int32 age = 100;
}
*/

message AddressBook {
  repeated Person person = 1;
}
